<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp">

    <ImageView
        android:id="@+id/avatarW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/card"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@drawable/github" />

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@android:color/black"
        android:padding="10dp">

        <TextView
            android:id="@+id/userW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/companyW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            tools:text="@string/companyuser" />

    </LinearLayout>

</RelativeLayout>