<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_favorite"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@android:color/darker_gray"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/user_name_favorite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:text="@string/nameuser"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/company"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />


        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_account"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/name_favorite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/name"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/location_favorite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="35dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/location"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:ignore="SmallSp" />


        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="49dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_company"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/company_favorite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="49dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/companyuser"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:ignore="SmallSp" />


        <androidx.cardview.widget.CardView
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="65dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repository"
                        android:textColor="@android:color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/repo_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo"
                        android:textColor="@android:color/black"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@android:color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/followers_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follws"
                        android:textColor="@android:color/black"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@android:color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/following_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follwng"
                        android:textColor="@android:color/black"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>